# FragFold

./: .gitignore  221006_prototype_createMSAFromExisting.ipynb  221020_createMSAFromExisting.ipynb  Dockerfile  LICENSE.txt  README.md  colabfold_output.json  colabfold_process_output.py  contact_recovery_analysis.py  createMSAFromExisting.py  fragfold.yml  install_fragfold.sh  mmseqs2.py  pyproject.toml
analysis/: colabfold_predictions.csv
data/: PPI_inhibitory_fragment_peaks_AS_230114.csv
derived_data/: 230326_peakDiscoveryBenchmark_expPeaksInhibCutoffn2Zscore2.5Grouping25Gap5_alphafoldPredClusterCutoff0.5Contacts.csv
example/: submit_fragfold_ftsz.sh
fragfold/: calculate_benchmark_statistics.py  calculate_benchmark_statistics_paramscan.py  colabfold_process_output.py  contact_recovery_analysis.py  create_fragment_msa.py  nullmodel_benchmark_statistics.py  predict_alphafold_peaks.py
inhib_frag_pred/: calculate_benchmark_statistics.py  colabfold_process_output.py  contact_recovery_analysis.py  predict_alphafold_peaks.py
input/: 221020_createMSAFromExisting.ipynb
json/: colabfold_contact_recovery.json  colabfold_contact_recovery_example.json
nextflow/: README.md  fragfold_example.nf  ftsZ_homomeric_example.nf  heteromeric_fragments.nf  homomeric_fragments.nf  main.nf  modules.nf  nextflow.config  process_v1_output.nf  test_fragfold.sh
scripts/: mmseqs2.py
src/: analyze_predictions.py  colabfold_analysis.py  colabfold_create_msa.py  colabfold_process_output.py  colabfold_process_output_utils.py  peak_prediction.py
submit_colabfold_jobs/: dummy_test.sh  (+1 more)
(+364 files in other folders)
